syntax = "proto3";
package rental.v1;
option go_package="coolcar/rental/api/gen/v1;rentalpb";



message Location {
  double latitude = 1;
  double longitude = 2;
}

message LocationStatus{
  Location loacation = 1;//当前位置
  int32 fee_cent = 2;//金额
  double km_drivern = 3;//已开距离
  string poi_name = 4;//地标名字
}

enum TripStatus{
  TS_NOT_SPECIFIED = 0;
  IN_PROGERSS = 1;
  FINISHED =2;
}
message TripEntity{
  string id = 1;
  Trip trip =2;
}

// entity
message Trip{
  string account_id = 1;
  string car_id = 2;
  LocationStatus start = 3;
  LocationStatus end = 4;
  LocationStatus current = 5;
  TripStatus status = 6;
  string identity_id = 7;
}

message CreateTripRequest {
   Location start = 1;
   string car_id = 2;
}

message GetTripRequest{
  string id = 1;
}

message GetTripsRequest{
  TripStatus status = 1;
}

message GetTripsResponse{
  repeated TripEntity trips = 1;
}

message UpdateTripRequest{
  string id = 1;
  Location current = 2;
  bool end_trip = 3;
}

service TripService{
  rpc CreateTrip (CreateTripRequest) returns (TripEntity);
  rpc GetTrip (GetTripRequest) returns (Trip);
  rpc GetTrips (GetTripsRequest) returns (GetTripsResponse);
  rpc UpdateTrip (UpdateTripRequest) returns (Trip);
}
